<resources>
    <string name="app_name">仿银泰网</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="login">登录</string>
    <string name="reg">注册</string>
    <string name="username_hint">邮箱/用户名/手机号</string>
    <string name="pwd_hint">密码</string>
    <string name="login_other_way">使用其它账号登录</string>
    <string name="login_qq">QQ</string>
    <string name="login_alipay">支付宝</string>
    <string name="login_weibo">新浪微博</string>
    <string name="server_send_success">已发送，请尽快使用</string>
    <string name="send_validvode_success">验证码已成功发送，请注意查收</string>
    <string name="server_error">服务器异常,请稍后再试</string>
    <string name="register_phone_input">请输入手机号</string>
    <string name="register_phone_right">请输入正确的手机号码</string>
    <string name="number_format">0123456789</string>
    <string name="sumbit_and_get_validcode">提交并获取验证码</string>
    <string name="register_success">注册成功</string>
    <string name="register_validcode_send_success">验证码已成功发送，请注意查收</string>
    <string name="register_reget_validcode">重新获取</string>
    <string name="validcode_input">请输入验证码</string>
    <string name="password_input">请输入密码</string>
    <string name="password_wrong_format">密码格式不正确</string>
    <string name="your_register_phone">您注册的手机号为:</string>
    <string name="validcode">验证码</string>
    <string name="reget_validcode">获取验证码</string>
    <string name="password">密   码</string>
    <string name="password_length">设置密码，6-16个字符</string>
    <string name="register_sumbit">提交</string>
    <string name="reg_tip">请输入您的手机号</string>
        <string name="tip_title1">温馨提示</string>
        <string name="OK">确定</string>
        <string name="quit">退出</string>
        <string name="loading_prompt">请稍后...</string>
        <string name="tip_param_error">参数错误，无法打开页面</string>
        <string name="reminder">温馨提示</string>
        <string name="no_net_temp">您现在没有网络连接</string>
        <string name="sure">确定</string>
        <string name="cancel">取消</string>
        <string name="no_data">暂无信息</string>
        <string name="toolsbuttons_home">首页</string>
        <string name="toolsbuttons_category">分类</string>
        <string name="toolsbuttons_topic">消息中心</string>
        <string name="toolsbuttons_shopcar">购物车</string>
        <string name="toolsbuttons_me">我的银泰</string>
        <string name="toolsbuttons_sale">特卖</string>
        <string name="serverIP">http://60.247.44.101:8080/service</string>
        <string name="name_null">用户名不能为空</string>
        <string name="pwd1_null">密码不能为空</string>
        <string name="service_started">服务启动了</string>
        <string name="errorTitle">温馨提示</string>
        <string name="loadTitle"><strong>正在更新数据</strong></string>
        <string name="LoadContent"><strong>请稍候……</strong></string>
        <string name="promotion_tip">1.为确保账户安全,非移动客户端渠道优惠券请在银泰官方网站激活,使用。
		"\n"2.移动客户端优惠券仅用于移动客户端订单,网站订单不可使用。</string>
        <string name="Ensure">"确定"</string>
        <string name="Cancel">"取消"</string>
        <string name="confirm_install_hint">"安装提示"</string>
        <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
        <string name="confirm_wallet_install">"为保证您的交易安全，需要您安装/更新支付宝钱包，才能进行付款。\n\n点击确定，立即安装。"</string>
        <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
        <string name="remote_call_failed">Failure calling remote service</string>
        <string name="silverremainder_total">您的订单需要支付金额:</string>
        <string name="silverremainder_need">您还需支付金额:</string>
        <string name="paypwd_tip">支付密码是您使用银元余额支付订单时输入的密码。</string>
        <string name="alipay_failure">支付失败</string>
        <string name="coin_balance_tip">使用说明：\n请先选择满减或优惠券后再使用银元余额。</string>
        <string name="name">姓名:</string>
        <string name="age">年龄:</string>
        <string name="pinlv">位置信息上报周期(min):</string>
        <string name="setTag">设置标签</string>
        <string name="delTag">删除标签</string>
        <string name="location">位置上报</string>
        <string name="setInterval">设置周期(秒)</string>
        <string name="openLBS">开启位置定时上报</string>
        <string name="closeLBS">关闭位置定时上报</string>
        <string name="logintimeout">您已经很长时候没有使用啦,为保证你的账户安全,请重新登录.</string>
        <string name="titles">欢迎来到银泰</string>
        <string name="more_login">登录/注册</string>
        <string name="weibosdk_demo_has_installed_weibo">\t已安装</string>
        <string name="weibosdk_demo_has_not_installed_weibo">\t未安装</string>
        <string name="weibosdk_demo_cancel_download_weibo">\t取消下载</string>
        <string name="weibosdk_demo_toast_share_success">分享成功</string>
        <string name="weibosdk_demo_toast_share_failed">分享失败</string>
        <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
        <string name="share_label_etc">其他</string>
        <string name="share_productdetail_content">我在银泰网发现了这个宝贝，只售“%1$s元”快来抢吧！</string>
        <string name="scan_text">将条码/二维码放入框内, 即可自动扫描</string>
        <string name="photo_album">相册</string>
        <string name="scan_scan">扫一扫</string>
        <string name="scan_qr_img">选择二维码图片</string>
        <string name="scan_qr_not_find">未发现二维码</string>
        <string name="scan_failure">扫描失败!</string>
        <string name="search_hint">请输入商品名称、品牌或编号</string>
        <string name="search">搜索</string>
        <string name="label_default">默认</string>
        <string name="china_mobile">中国移动</string>
        <string name="china_unicom">中国联通</string>
        <string name="China_telecom">中国电信</string>
        <string name="title_aboutyintai">关于银泰</string>
        <string name="title_action">活动</string>
        <string name="title_address_detail">地址详情</string>
        <string name="title_address_add">添加地址</string>
        <string name="title_address_modify">编辑地址</string>
        <string name="title_address_manage">地址管理</string>
        <string name="title_app_recommend">软件推荐</string>
        <string name="title_brand">品牌墙</string>
        <string name="title_deal_rule">银泰网交易条款</string>
        <string name="title_category">分类</string>
        <string name="title_dealcenter">结算中心</string>
        <string name="title_wuliu">物流查询</string>
        <string name="title_myfavorite">我的收藏</string>
        <string name="title_feedback">意见反馈</string>
        <string name="title_help">常见问题</string>
        <string name="title_banlituihuo">办理退货</string>
        <string name="title_homepage">首页</string>
        <string name="title_input_guidecode">录入导购编码</string>
        <string name="title_invoice">填写发票信息</string>
        <string name="title_mingpin">名品馆</string>
        <string name="title_msgcenter">消息中心</string>
        <string name="title_mymsg">我的消息</string>
        <string name="title_myyintai">我的银泰</string>
        <string name="title_more">更多</string>
        <string name="title_orderdetail">订单详情</string>
        <string name="title_order_submit_success">提交成功</string>
        <string name="title_choosepaymode">选择支付方式</string>
        <string name="title_setpaypwd">设置支付密码</string>
        <string name="title_myvoucher">我的优惠券</string>
        <string name="title_branddetail">品牌明细</string>
        <string name="title_recentbrowser">最近浏览</string>
        <string name="title_regist">注册</string>
        <string name="title_regist_byphoneno">手机号注册</string>
        <string name="title_regist_verify">验证</string>
        <string name="title_scan_result">扫描结果</string>
        <string name="title_shiyong_yinyuan">使用银元或余额</string>
        <string name="title_tuihuo">退货</string>
        <string name="title_tuihuanhuo_shuoming">退换货说明</string>
        <string name="title_tuihuanhuo_zhuangtai">退换货状态</string>
        <string name="title_verify_phone">手机验证</string>
        <string name="title_my_yinyuanyue">我的银元余额</string>
        <string name="title_shopcar">购物车</string>
        <string name="title_noticelist">公告</string>
        <string name="title_style">全部风格</string>
        <string name="title_big_picture">查看大图</string>
        <string name="title_limitbuy_subtitle">(每天11点名品折扣上新)</string>
        <string name="title_publicmsg_detail">公告详情</string>
        <string name="title_sale">特卖</string>
        <string name="title_detailinfo">详细信息</string>
        <string name="title_productdetail">商品详情</string>
        <string name="title_sizedetail">尺码详情</string>
        <string name="title_rightbtn_modify">修改</string>
        <string name="title_rightbtn_complete">完成</string>
        <string name="title_rightbtn_seekbar_bychar">按字母索引</string>
        <string name="title_rightbtn_seekbar_bybrand">按品牌索引</string>
        <string name="title_rightbtn_ordersubmit">提交订单</string>
        <string name="title_rightbtn_edit">编辑</string>
        <string name="title_rightbtn_onlinepay">在线支付</string>
        <string name="title_rightbtn_help">帮助</string>
        <string name="title_rightbtn_clear">清除记录</string>
        <string name="title_rightbtn_subscribe">订阅频道</string>
        <string name="title_rightbtn_filter">筛选</string>
        <string name="pay_label_paysuccess">支付成功</string>
        <string name="pay_label_paysuccess_result">付款成功</string>
        <string name="template_jump_needlogin">请先登录后再操作</string>
        <string name="template_addshopcar_success">加入购物车成功</string>
        <string name="template_addvoucher_success">领取优惠卷成功</string>
        <string name="template_addfavorite_success">收藏商品成功</string>
        <string name="order_submitsucess_hotline_tip">如有疑问，您可以拨打银泰网客服电话：</string>
        <string name="order_submitsucess_hotline">400-119-1111</string>
        <string name="order_submitsucess_hotline_time">服务时间：8:00-24:00</string>
        <string name="orderlist_title_all">全部订单</string>
        <string name="orderlist_title_needpay">待支付订单</string>
        <string name="order">订单</string>
        <string name="productdetail_popup_addconfrim">确认加入</string>
        <string name="productdetail_popup_buyconfrim">确认购买</string>
        <string name="add_shopcart">加入购物车</string>
        <string name="now_buy">立即购买</string>
        <string name="settlement_shelfproduct_tip">订单中有已下架的商品,请重新选择</string>
        <string name="settlement_lowstocks_tip">订单中有商品库存不足,请重新选择</string>
        <string name="shake_tip_label">每天都可摇，每天有惊喜！</string>
        <string name="yintai_net">银泰网  www.yintai.com</string>
        <string name="yintai_description_part_one">        银泰网(  www.yintai.com )是专注于精品时尚百货经营的大型B2C电子商务平台，由国内领先百货连锁集团、香港联交所上市公司银泰百货投资控股.</string>
        <string name="yintai_description_part_two">        银泰网抱着“为13亿在中国人传递新的生活美学”的梦想，把“为用户提供超出想像的满意服务，传播优质品牌影响力”作为使命，致力于让中国时尚消费人群，专享最时尚、最品牌、最品质、最价格的生活品质与潮流购物体验，成为中国最卓越的精品时尚百货购物网站.</string>
        <string name="yintai_copright_left">银泰网( </string>
        <string name="yintai_copright_right"> )版权所有</string>
        <string name="yintai_net_address">www.yintai.com</string>
        <string name="weibo_tip">欢迎关注新浪官方微博@手机银泰</string>
        <string name="weixin_tip">微信公众帐号@手机银泰百货</string>
        <string name="feedback_tip">欢迎您提出宝贵意见,协助我们不断的提高服务和购物体验,谢谢您对银泰网的支持!</string>
        <string name="feedback_content_tip">请输入您的意见或建议(必填)</string>
        <string name="feedback_link_tip">联系方式:</string>
        <string name="feedback_phone_tip">请输入您的手机号(必填)</string>
        <string name="feedback_submit">提交</string>
        <string name="pwd_login_pwd">登录密码：</string>
        <string name="pwd_login_pwd_hint">请输入您的登录密码 　　　  　　　  　 　　　 </string>
        <string name="pwd_pay_pwd">支付密码：</string>
        <string name="pwd_pay_pwd_hint">6-16字符，需包括数字和字母 　 　　  　　　 </string>
        <string name="pwd_repeat_input">再次输入：</string>
        <string name="pwd_repeat_input_hint">请再次输入支付密码 　 　　　　　   　　　 　 </string>
        <string name="pwd_next_to_valid_phone">下一步：验证手机号</string>
</resources>