<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:background="@color/color_F1F1F1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/guanyu_img_fanhui"
            android:src="@drawable/zuojiantou"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:text="关于银泰"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="none">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/icon" />

                <TextView
                    style="@style/style_13_231f20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dip"
                    android:text="@string/yintai_net"
                    android:visibility="gone" />

                <RelativeLayout
                    android:id="@+id/showtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:background="@drawable/shape_rounded_rectangle"
                        android:orientation="vertical"
                        android:padding="10dip">

                        <TextView
                            android:id="@+id/import_bidb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:text="@string/yintai_description_part_one"
                            android:textColor="#666666"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yintai_description_part_two"
                            android:textColor="#666666"
                            android:textSize="20sp" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/about_text"
                    style="@style/style_12_6666662"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:text="" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/style_12_6666662"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yintai_copright_left" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:autoLink="web"
                        android:text="@string/yintai_net_address"
                        android:textColorLink="@color/pink"
                        android:textSize="12sp" />

                    <TextView
                        style="@style/style_12_6666662"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/yintai_copright_right" />
                </LinearLayout>

                <TextView
                    style="@style/style_12_6666662"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/weibo_tip" />

                <TextView
                    style="@style/style_12_6666662"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/weixin_tip" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</LinearLayout>