<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:background="@color/color_F1F1F1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/shezhi_img_fanhui"
            android:src="@drawable/zuojiantou"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:text="设置支付密码"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout
            android:id="@+id/paypwd_rlyt_input"
            android:layout_width="700dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/paypwd_tv_tip"
                style="@style/style_14_3333332"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:text="@string/paypwd_tip" />

            <RelativeLayout
                android:id="@+id/paypwd_rlyt_loginpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/paypwd_tv_tip"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/paypwd_tv_loginpwd_title"
                    style="@style/style_14_3333332"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="120dp"
                    android:text="@string/pwd_login_pwd" />

                <EditText
                    android:id="@+id/paypwd_et_loginpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/paypwd_tv_loginpwd_title"
                    android:background="@drawable/input_password"
                    android:hint="@string/pwd_login_pwd_hint"
                    android:paddingLeft="3dp"
                    android:password="true"
                    android:textSize="16dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/paypwd_rlyt_paypwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/paypwd_rlyt_loginpwd"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/paypwd_tv_paypwd_title"
                    style="@style/style_14_3333332"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="120dp"
                    android:text="@string/pwd_pay_pwd" />

                <EditText
                    android:id="@+id/paypwd_et_paypwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/paypwd_tv_paypwd_title"
                    android:background="@drawable/input_password"
                    android:hint="@string/pwd_pay_pwd_hint"
                    android:paddingLeft="3dp"
                    android:password="true"
                    android:textSize="16dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/paypwd_rlyt_payagainpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/paypwd_rlyt_paypwd"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/paypwd_tv_payagainpwd_title"
                    style="@style/style_14_3333332"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="120dp"
                    android:text="@string/pwd_repeat_input" />

                <EditText
                    android:id="@+id/paypwd_et_payagainpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/paypwd_tv_payagainpwd_title"
                    android:background="@drawable/input_password"
                    android:hint="@string/pwd_repeat_input_hint"
                    android:paddingLeft="3dp"
                    android:password="true"
                    android:textSize="16dp" />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/paypwd_tv_nextvalidatephone"
            style="@style/style_16_ffffff2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/paypwd_rlyt_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/order_new_submit"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/pwd_next_to_valid_phone" />
    </RelativeLayout>
</LinearLayout>