<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:background="@color/color_F1F1F1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/fankui_img_fanhui"
            android:src="@drawable/zuojiantou"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:text="意见反馈"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="none"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true">

            <RelativeLayout
                android:id="@+id/body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="19dip"
                android:paddingLeft="13dip"
                android:paddingRight="13dip"
                android:paddingTop="19dip">

                <TextView
                    android:id="@+id/flag001"
                    style="@style/style_13_231f20"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:text="@string/feedback_tip" />

                <EditText
                    android:id="@+id/feedback_textview"
                    style="@style/style_12_666666"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/flag001"
                    android:gravity="top"
                    android:hint="@string/feedback_content_tip"
                    android:maxLength="1000"
                    android:minLines="10"
                    android:paddingBottom="6dip"
                    android:paddingLeft="13dip"
                    android:paddingRight="13dip"
                    android:paddingTop="6dip"/>

                <TextView
                    android:id="@+id/flag002"
                    style="@style/style_13_231f20"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/feedback_textview"
                    android:layout_marginBottom="8dip"
                    android:layout_marginTop="11dip"
                    android:text="@string/feedback_link_tip" />

                <EditText
                    android:id="@+id/phone_edittext"
                    style="@style/style_12_666666"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/flag002"
                    android:hint="@string/feedback_phone_tip"
                    android:maxLength="11"
                    android:paddingLeft="13dip"
                    android:paddingRight="13dip"/>

                <Button
                    android:id="@+id/submit_button"
                    style="@style/style_20_ffffff"
                    android:layout_width="fill_parent"
                    android:layout_height="44dip"
                    android:gravity="center"
                    android:layout_below="@id/phone_edittext"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dip"
                    android:background="@drawable/a_shape_longbtn_1"
                    android:text="@string/feedback_submit" />
            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>
</LinearLayout>