<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.yintaidemo.ui.VerificationActivity">
<LinearLayout
    android:background="@color/color_F1F1F1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/zuojiantou"
        android:layout_width="30dp"
        android:layout_height="30dp" />
    <TextView
        android:text="验证"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content" />
</LinearLayout>
    <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_F1F1F1">

    <TextView
        android:id="@+id/phone2_number"
        style="@style/style_17_e5004f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/phone2_textview"
        android:layout_alignBottom="@+id/phone2_textview"
        android:layout_marginTop="23dp"
        android:layout_toRightOf="@+id/phone2_textview"
        android:text=""
        android:textColor="@color/color_333333" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone2_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:background="@drawable/bg_frame_top_bottom_d2d2d2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/phone2_yanzheng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_frame_round_666666"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/reget_validcode"
                android:textColor="@color/color_666666"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/yanzheng_edittext"
                style="@style/style_14_a7a7a7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:layout_toLeftOf="@+id/phone2_yanzheng"
                android:background="@null"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/validcode_input"
                android:maxLength="6"
                android:textColorHint="@color/color_cccccc"
                android:textSize="18sp">

                <requestFocus />
            </EditText>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_d2d2d2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/phone2_pass"
                style="@style/style_14_a7a7a7"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/password_length"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textColorHint="@color/color_cccccc"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/phone1_button"
        style="@style/style_18_ffffff"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_round_e5004f"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:gravity="center"
        android:text="@string/register_sumbit" />

    <TextView
        android:id="@+id/phone2_textview"
        style="@style/style_13_231f20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/your_register_phone"
        android:textColor="@color/color_666666"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/phone1_button"
        android:layout_alignStart="@+id/phone1_button" />
</RelativeLayout>
</LinearLayout>
